--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<app-dashboard></app-dashboard>
+<nav class="navbar navbar-light todo-navbar d-flex justify-content-center">
+    <span class="navbar-brand mr-0 mb-0 h1">{{ title }}</span>
+</nav>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
