refactored code to move list of todos to each todo-list-item component

--- a/src/app/todo-list-item/todo-list-item.component.html
+++ b/src/app/todo-list-item/todo-list-item.component.html
@@ -1,1 +1,1 @@
-<p>todo-list-item works!</p>
+{{ todo.description }} ({{ todo.id }}) is due in {{ todo.dueDate }}, and it is {{ todo.completed ? 'completed' : 'not completed'}}.
