--- a/src/app/new-todo-item/new-todo-item.component.html
+++ b/src/app/new-todo-item/new-todo-item.component.html
@@ -1,1 +1,21 @@
-<p>new-todo-item works!</p>
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+        <h2>New Todo Item</h2>
+        <p class="lead">Enter a new todo task.</p>
+        <form>
+            <div class="form-group">
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="2"></textarea>
+            </div>
+            <div class="form-inline d-sm-flex align-items-sm-center justify-content-sm-end">
+                <label class="my-1 mr-2 form-text text-muted" for="duedate">Due Date</label>
+                <select class="custom-select mr-sm-2" id="duedate">
+                    <option selected>Choose...</option>
+                    <option value="urgent">Urgent</option>
+                    <option value="days">Days</option>
+                    <option value="week">Week</option>
+                </select>
+                <button type="submit" class="btn btn-primary add-btn-block mt-2 mt-sm-0">Add</button>
+            </div>
+        </form>
+    </div>
+</div>
