--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -1,3 +1,5 @@
-<ul class="list-group mt-3">
-    <app-todo-list-item class="list-group-item" *ngFor="let task of tasks | async; let i = index" [attr.data-index]="i" [todo]="task"></app-todo-list-item>
-</ul>
+<div class="container">
+    <ul class="list-group mt-3">
+        <app-todo-list-item class="list-group-item" *ngFor="let task of tasks | async; let i = index" [attr.data-index]="i" [todo]="task"></app-todo-list-item>
+    </ul>
+</div>
