installed and added Font Awesome icon library

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,7 @@
-.todo-navbar {
-    background-color: #e3f2fd;
+.todo-app-github {
+    color: #fff;
+}
+
+.todo-app-github:hover {
+    color: #000;
 }
