--- a/src/app/new-todo-item/new-todo-item.component.html
+++ b/src/app/new-todo-item/new-todo-item.component.html
@@ -1,4 +1,5 @@
 <div class="jumbotron jumbotron-fluid">
+    <div class="background"></div>
     <div class="container">
         <h2>New Todo Item</h2>
         <p class="lead">Enter a new todo task.</p>
