added timestamp and order todo collection by timestamp

--- a/src/app/new-todo-item/new-todo-item.component.html
+++ b/src/app/new-todo-item/new-todo-item.component.html
@@ -14,9 +14,8 @@
             <div class="form-inline d-sm-flex align-items-sm-center justify-content-sm-end">
                 <label class="my-1 mr-2 form-text text-muted" for="duedate">Due Date</label>
                 <select class="custom-select mr-sm-2" id="duedate" formControlName="dueDate">
-                    <option selected>Choose...</option>
                     <option value="urgent">Urgent</option>
-                    <option value="days">Days</option>
+                    <option value="days" selected>Days</option>
                     <option value="week">Week</option>
                 </select>
                 <button type="submit" class="btn btn-primary add-btn-block mt-2 mt-sm-0">Add</button>
