--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
 <nav class="navbar navbar-dark bg-primary">
     <span class="navbar-brand mr-0 mb-0 h1"><fa-icon [icon]="['fas', 'check-square']"></fa-icon> {{ title }}</span>
-    <a class="todo-app-github" href="https://github.com/Lin87" target="_blank"><fa-icon [icon]="['fab', 'github']" size="lg"></fa-icon></a>
+    <a class="todo-app-github" href="https://github.com/Lin87/todoapp" target="_blank"><fa-icon [icon]="['fab', 'github']" size="lg"></fa-icon></a>
 </nav>
 <router-outlet></router-outlet>
+<footer class="footer mt-auto py-3 text-center">
+    <div class="container">
+        <small class="text-muted">&copy; 2019 <a href="https://github.com/Lin87" target="_blank">Ethan Lin</a></small>
+    </div>
+</footer>
