update repo name

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-dark bg-primary">
     <span class="navbar-brand mr-0 mb-0 h1"><fa-icon [icon]="['fas', 'check-square']"></fa-icon> {{ title }}</span>
-    <a class="todo-app-github" href="https://github.com/Lin87/todoapp" target="_blank"><fa-icon [icon]="['fab', 'github']" size="lg"></fa-icon></a>
+    <a class="todo-app-github" href="https://github.com/Lin87/todo-app" target="_blank"><fa-icon [icon]="['fab', 'github']" size="lg"></fa-icon></a>
 </nav>
 <router-outlet></router-outlet>
 <footer class="footer mt-auto py-3 text-center">
